--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
     <h1>This is my first web page</h1>
     <h1>My name is Marek</h1>
+    <h1 class="love">And I love you!!!</h1>
 </body>
 </html>
