--- a/index.html
+++ b/index.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My First Web page</title>
+    <!-- Importing fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Josefin+Sans:wght@300&display=swap"
+        rel="stylesheet">
+    <!-- Linking CSS -->
     <link rel="stylesheet" href="style.css">
+    <title>Anakin CV</title>
+    
+    <div class="container">
+    <img class="anakin" src="https://raw.githubusercontent.com/green-fox-academy/myfirstapp-syllabus/master/assets/first-website-header.png"
+        alt="Anakin">
+        
+        <div class="text">Some text</div>
+    </div>
 </head>
 
-<body>
-    <h1>This is my first web page</h1>
-    <h1>My name is Marek</h1>
-    <h1 class="love">And I love you :-) !!!</h1>
-</body>
 </html>
