added counter page

--- a/index.html
+++ b/index.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Importing fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Josefin+Sans:wght@300&display=swap"
-        rel="stylesheet">
-    <!-- Linking CSS -->
-    <link rel="stylesheet" href="style.css">
-    <title>Anakin CV</title>
-    
-    <div class="container">
-    <img class="anakin" src="https://raw.githubusercontent.com/green-fox-academy/myfirstapp-syllabus/master/assets/first-website-header.png"
-        alt="Anakin">
-        
-        <div class="text">Some text</div>
-    </div>
+    <!-- style sheet -->
+    <link rel="stylesheet" href="./style.css">
+    <!-- new font -->
+    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@800&display=swap" rel="stylesheet">
+    <title>Counter</title>
 </head>
+<body>
+    <h1>Counter</h1>
 
+    <h3>0</h3>
+
+    <button class="increase">Increase</button>
+    <button class="decrease">Decrease</button>
+    <!-- loading jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <!-- loading JavaScript -->
+    <script src="./scripts.js"></script>  
+</body>
 </html>
