replacing with todo

--- a/index.html
+++ b/index.html
@@ -7,18 +7,19 @@
     <link rel="stylesheet" href="./style.css">
     <!-- new font -->
     <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@800&display=swap" rel="stylesheet">
-    <title>Counter</title>
+    <title>ToDo List</title>
 </head>
 <body>
-    <h1>Counter</h1>
+    <h1>My Simple ToDo list</h1>
+    <h3>ToDo</h3>
+    <ul id="bourne"></ul>
+    
+    <input type="text">
+    <button>Add ToDo</button>
 
-    <h3>0</h3>
-
-    <button class="increase">Increase</button>
-    <button class="decrease">Decrease</button>
     <!-- loading jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <!-- loading JavaScript -->
-    <script src="./scripts.js"></script>  
+    <script src="./scripts.js"></script> 
 </body>
 </html>
